deploy/istio-system/niche-ns.yaml
apiVersion: vq
kind: Namespace
metadata:
  name: app-niche
  labels:
    name: app-niche
